traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if ((6,6)==(getX(),getY())){
  ^